# littlesnitch-linux

./: .gitignore  Cargo.toml  README.md  blocked_domains.txt  blocked_hosts.txt  rustfmt.toml
.cargo/: config.toml
common/: Cargo.toml
common/src/: bitset.rs  bpf_string.rs  closed_range.rs  dns_types.rs  event.rs  ext_order.rs  flow_debug.rs  flow_types.rs  lib.rs  mock_node_cache.rs  mock_strings_cache.rs  node_cache.rs  repeat.rs
common/src/network_filter/: Concepts.md  binary_rule.rs  binary_searchable_page.rs  blocklist_matching.rs  blocklist_page.rs  domain_name_page.rs  filter_engine.rs  filter_model.rs  mock_filter_model.rs  mod.rs  port_table_search.rs  rule_page.rs  rule_types.rs
demo-runner/: Cargo.toml  build.rs
demo-runner/src/: demo_blocklist.rs  demo_blocklist_load_from_file.rs  demo_ebpf_proxy.rs  demo_ebpf_proxy_dump_dns.rs  demo_ebpf_proxy_event_handling.rs  demo_ebpf_proxy_garbage_collect.rs  demo_filter_maps.rs  demo_node_cache.rs  demo_node_manager.rs  demo_strings_cache.rs  main.rs  nano_time.rs
ebpf/: Cargo.toml  build.rs  rust-toolchain.toml
ebpf/co-re/: co-re.c  co-re.h
ebpf/src/: context.rs  current_executable.rs  dn_expand.rs  dns_cache.rs  event_queue.rs  filter_engine_connection.rs  flow_cache.rs  helpers.rs  ip_parser.rs  kernel_filter_model.rs  lib.rs  main.rs  node_cache.rs  socket_properties.rs  strings_cache.rs  unique_id.rs
webroot/: README.md  app.js  blocklists.css  blocklists.js  connections.css  connections.js  index.html  localization.js  rules.css  rules.js  selection.js  styles.css  traffic.css  traffic.js
