[workspace]
resolver = "2"
members = [
    "demo-runner",
    "common",
    "ebpf",
]
default-members = ["demo-runner", "common"]

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2024"

[workspace.dependencies]
# This particular commit is known to work. eBPF is somewhat fragile, so stick
# with this commit until a newer one is proven to work.
aya = { git = "https://github.com/aya-rs/aya", rev = "4fbce44b6a49dd189a7a3520c66db45baf3832ea", default-features = false }
aya-build = { git = "https://github.com/aya-rs/aya", rev = "4fbce44b6a49dd189a7a3520c66db45baf3832ea", default-features = false }
aya-ebpf = { git = "https://github.com/aya-rs/aya", rev = "4fbce44b6a49dd189a7a3520c66db45baf3832ea", default-features = false }
aya-log = { git = "https://github.com/aya-rs/aya", rev = "4fbce44b6a49dd189a7a3520c66db45baf3832ea", default-features = false }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya", rev = "4fbce44b6a49dd189a7a3520c66db45baf3832ea", default-features = false }

[profile.release.package.ebpf]
debug = 2
codegen-units = 1
