[package]
name = "common"
version = "0.1.0"
edition.workspace = true

license.workspace = true

[features]
default = []
user = ["aya"]

[dependencies]
# We need the `aya` crate for the `Pod` trait.
aya = { workspace = true, optional = true }

[target.'cfg(target_arch = "bpf")'.dependencies]
aya-ebpf = { workspace = true }

[lib]
path = "src/lib.rs"
