[package]
name = "ebpf"
version = "0.1.0"
edition.workspace = true

[features]
with-inline-assembler = []

[dependencies]
common = { path = "../common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
network-types = "^0.1"

[build-dependencies]
which = { version = "6.0.0", default-features = false }
bindgen = { version = "0.72" }
cc = "1.2"

[[bin]]
name = "linux-snitch-ebpf"
path = "src/main.rs"
